flapivor/tests/m1/hopix/parser/bad/42-external-definition-2.hopix
extern `++` : forall. List<a> * List<a> -> List<a>